<resources>
    <string name="app_name">Hermes</string>
    <string name="welcomeString">Welcome to Hermes!\nlet\'s create your account.</string>
    <string name="roleSelection">Select a Role</string>
    <string name="email">Email</string>
    <string name="john_doe_email">Ex. JohnDoe@gmail.com</string>
    <string name="john_doe">Ex. John Doe</string>
    <string name="full_name">Full Name</string>
    <string name="password_hint">At least 8 characters</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcomeSignIn">Welcome back to Hermes\nLet\'s sign you in!</string>
    <string name="bell_icon">notifications</string>
</resources>